--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 /* font family link */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Manrope:wght@200;300;400;500;600;700;800&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 * {
   margin: 0;
@@ -23,9 +24,12 @@
   --text-primary: #3A3A3A;
   --text-light-dark: #18191F;
   --text-gray: #787885;
-  --text-rating: #5E6366;
+  --text-rating: #FB8200;
 }
-
+/* margin */
+.mt-5{
+  margin-top: 5px;
+}
 /* bg color */
 .bg-white {
   background-color: var(--bg-white);
@@ -40,7 +44,7 @@
 }
 
 /* text color */
-.text-wite {
+.text-white {
   color: var(--text-white);
 }
 
@@ -63,7 +67,9 @@
 .text-rating {
   color: var(--text-rating);
 }
-
+.text-center{
+  text-align: center;
+}
 /* btn color */
 .btn-primary {
   background-color:  var(--primary-btn);
@@ -81,6 +87,7 @@ body {
   font-family: 'Inter', sans-serif;
   font-family: 'Manrope', sans-serif;
   font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 /* header part start */
@@ -158,7 +165,6 @@ nav ul li a{
   height: auto;
   margin: 0 auto;
   padding: 50px 100px;
-  background-color: rebeccapurple;
 }
 .sponsors-container{
   display: flex;
@@ -166,3 +172,139 @@ nav ul li a{
   align-items: center;
 }
 /* sponsored part end */
+
+/* popular part start */
+.popular{
+  max-width: 75%;
+  height: auto;
+  margin: 0 auto;
+  padding: 50px 100px;
+}
+.popular-header{
+  padding-bottom: 30px;
+}
+.popular-title{
+  font-family: Poppins;
+  font-size: 1.75rem;
+  font-weight: 600;
+}
+.popular-card-box{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 1.875rem;
+  justify-content: space-around;
+  align-items: center;
+}
+.popular-card{
+  padding: 16px 14px;
+  background: #FFF;
+  box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  
+}
+.popular-card-img{
+  width: 100%;
+  height: auto;
+}
+.popular-card-title{
+  font-family: Poppins;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+.popular-card-price {
+  font-family: 'Inter', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.87);
+}
+.popular-card-rating{
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 0.1px;
+}
+.popular-card-rating .rating-count{
+  color: #5E6366;
+}
+.popular-card-des{
+  font-family: 'Inter', sans-serif;
+  font-size: 0.75rem;
+  font-weight: 700;
+ 
+}
+/* popular part end */
+
+/* feature products part start */
+.feature-products{
+  max-width:80%;
+  height: auto;
+  margin: 0 auto;
+  padding: 50px 100px;
+}
+.feature-products-container{
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  gap: 50px;
+}
+.feature-products-img-box{}
+.feature-products-img-box img{
+  width: 100%;
+  height: auto;
+}
+.feature-products-text-box{}
+.feature-products-title{
+  color: #0A0826;
+  font-family: 'Poppins', sans-serif;
+  font-size: 2.375rem;
+  font-weight: 700;
+  /* margin-bottom: 15px; */
+}
+
+.feature-products-des{
+  color: #6C6C6C;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+.feature-products-btn{
+  border-radius: 0px !important;
+  -webkit-border-radius: 0px !important;
+  -moz-border-radius: 0px !important;
+  -ms-border-radius: 0px !important;
+  -o-border-radius: 0px !important;
+}
+/* feature products part end */
+
+/* footer part start */
+footer{
+  background-color: var(--bg-footer);
+}
+.footer-container{
+  max-width: 50%;
+  margin: 0 auto;
+  padding: 50px 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.footer-text-title{
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.footer-des{
+  color:  #D9DBE1;
+  font-family: 'Manrope', sans-serif;
+  font-size: 0.875rem;
+  font-weight: 700;
+}
+.footer-icon-container > svg{
+  color: var(--bg-white);
+  margin-right: 20px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+/* footer part end */
